Making Login Screen

--- a/telaInicio.html
+++ b/telaInicio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +8,11 @@
     <link rel="stylesheet" href="/src/styles.css">
     <title>Document</title>
 </head>
-
 <body>
-    <form class="allI">
-        <h1 style="margin-top: 20px; font-size: 40px;">JOGADORES</h1>
-        <div class="inpGroup">
-
-            <input type="text" placeholder="JOGADOR 1" required>
-            <input type="text" placeholder="JOGADOR 2" required>    
-
-        </div>
-        <button style="margin-top: 40px; height: 50px; width: 130px;" type="button" class="btn btn-success">ENTRAR</button>
-
-    </form>
+    <div class="allI">
+       <h1 style="font-weight: 600;">TIK TAC TOE GAME</h1>
+       <form class="inpGroup"> 
+       </form> 
+    </div>
 </body>
-
 </html>
